--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,6 @@
 @import '/src/assets/scss/components-scss/input';
+@import '/src/assets/scss/components-scss/btn';
+@import '/src/assets/scss/abstracts/variables';
 @import '/src/assets/scss/abstracts/mixins';
 
 // 此檔案用於存放全域css
