feat:新增input.scss

--- a/src/assets/scss/abstracts/_font.scss
+++ b/src/assets/scss/abstracts/_font.scss
@@ -1,6 +1,6 @@
 // 字體家族
-$font-family-en: 'Karla', sans-serif;
-$font-family-zh: 'Noto Sans TC', 'Noto Sans', sans-serif;
+$font-family-en: "Karla", sans-serif;
+$font-family-zh: "Noto Sans TC", "Noto Sans", sans-serif;
 
 // 字體權重
 $weight-regular: 400;
