--- a/src/assets/scss/components-scss/_input.scss
+++ b/src/assets/scss/components-scss/_input.scss
@@ -1,16 +1,15 @@
 
 // 形狀定義
-$radius-base:      10px;   // 一般 Input 的圓角
-$radius-pill:      30px;  // 搜尋框的圓角 (Pill shape)
-$height-base:      45px;  // 預設高度
-$height-lg:        60px;  // 大搜尋框高度
-$height-min:       40px;  // 小搜尋框高度
+$radius-base:      8px;   // 一般 Input 的圓角
+$radius-pill:      50px;  // 搜尋框的圓角 (Pill shape)
+$height-base:      40px;  // 預設高度
+$height-lg:        50px;  // 大搜尋框高度
 // _mixins.scss
 
 @mixin input-style(
   $width: 100%, 
   $radius: $radius-base, 
-  $border-color: $c-border-default,
+  $border-color: $neutral-color-400,
   $height: $height-base
 ) {
   // 基礎結構
@@ -19,28 +18,27 @@ $height-min:       40px;  // 小搜尋框高度
   height: $height;
   padding: 8px 12px;
   font-size: 16px;
-  color: $c-text;
-  background-color: $c-bg-white;
+  color: $neutral-color-black;
+  background-color: $neutral-color-white;
   border: 1px solid $border-color;
   border-radius: $radius;
   outline: none;
   transition: all 0.3s ease;
 
-  // Placeholder 樣式
+  Placeholder 樣式
   &::placeholder {
-    color: $c-placeholder;
+    color: $neutral-color-700;
   }
 
   // Focus 狀態 (變色 + 陰影)
   &:focus {
-    border-color: darken($c-border-default, 20%); 
-    // 或者使用特定 focus 顏色
-    // border-color: $c-border-focus; 
+    // border-color: darken($neutral-color-black, 20%); 
+    border-color: $neutral-color-black; 
   }
 
   // 禁用狀態
   &:disabled {
-    background-color: #f5f5f5;
+    //  border-color:$secondary-color-danger-700;
     cursor: not-allowed;
   }
 }
@@ -55,7 +53,7 @@ $height-min:       40px;  // 小搜尋框高度
   
   // 處理下方的提示文字 (假設 HTML 結構是 input + p.message)
   & + .input-message {
-    color: $color;
+    color: $neutral-color-black;
     display: block; // 顯示訊息
   }
 }
@@ -67,11 +65,11 @@ $height-min:       40px;  // 小搜尋框高度
 
   // 狀態 Class
   &.is-error {
-    @include input-status($c-error);
+    @include input-status($secondary-color-danger-700);
   }
 
   &.is-success {
-    @include input-status($c-success);
+    @include input-status($secondary-color-success-700);
   }
 }
 
@@ -92,7 +90,7 @@ $height-min:       40px;  // 小搜尋框高度
       $height: $height-lg    // 改用大高度
     );
     padding-left: 40px; // 預留位置給 Icon
-    border-color: #999; // 假設搜尋框邊框比較深
+    border-color:$secondary-color-success-700; 
   }
 
   // 搜尋 Icon
@@ -101,6 +99,7 @@ $height-min:       40px;  // 小搜尋框高度
     left: 14px;
     top: 50%;
     transform: translateY(-50%);
-    color: #666;
+    color:$neutral-color-800;
+;
   }
 }
