--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -1,26 +1,70 @@
-
 //中文標題
 @mixin heading-zh($min-size, $max-size, $font-weight: 400) {
-font-family: $font-family-zh;
-line-height: $lh-standard;
-letter-spacing: $ls-heading-zh;
-font-weight: $font-weight;
-font-size: unquote("clamp(#{$min-size}, 4vw, #{$max-size})");
+  font-family: $font-family-zh;
+  line-height: $lh-standard;
+  letter-spacing: $ls-heading-zh;
+  font-weight: $font-weight;
+  font-size: unquote('clamp(#{$min-size}, 4vw, #{$max-size})');
 }
 
 //英文標題
 @mixin heading-en($min-size, $max-size, $font-weight: 400) {
-font-family: $font-family-en;
-line-height: $lh-standard;
-letter-spacing: $ls-heading-en;
+  font-family: $font-family-en;
+  line-height: $lh-standard;
+  letter-spacing: $ls-heading-en;
 }
-
 
 //內文
 @mixin text-style($size, $line-height: $lh-standard) {
-font-size: $size;
-line-height: $line-height;
-letter-spacing: $ls-body;
-font-family: $font-family-zh;
+  font-size: $size;
+  line-height: $line-height;
+  letter-spacing: $ls-body;
+  font-family: $font-family-zh;
 }
 
+// 一般表單輸入框樣式
+@mixin input-style(
+  $width: 100%,
+  $radius: $radius-base,
+  $border-color: $neutral-color-400,
+  $height: $height-base
+) {
+  display: block;
+  width: $width;
+  height: $height;
+  padding: 8px 12px;
+  font-size: 16px;
+  color: $neutral-color-black;
+  background-color: $neutral-color-white;
+  border: 1px solid $border-color;
+  border-radius: $radius;
+  outline: none;
+  transition: all 0.3s ease;
+
+  &::placeholder {
+    color: $neutral-color-700;
+  }
+
+  &:focus {
+    border-color: $neutral-color-black;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    background-color: $neutral-color-100; // 建議加上禁用背景色
+  }
+}
+
+// 狀態呈現 (錯誤/正確)
+@mixin input-status($color) {
+  border-color: $color;
+
+  // &:focus {
+  //   box-shadow: 0 0 0 2px rgba($color, 0.2);
+  // }
+
+  & + .input-message {
+    color: $neutral-color-black;
+    display: block;
+  }
+}
