--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -6,3 +6,6 @@ $radius-pill: 50px; // 搜尋框的圓角 (Pill shape)
 $height-base: 40px; // 一般表單高度
 $height-search-sm: 40px; // 小搜尋框
 $height-search-lg: 60px; // 大搜尋框
+
+// 設定按鈕寬度變數
+$btn-width-full: 100%;
