feat:新增頁碼scss頁面

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,6 +9,7 @@
 //組件
 @import '/src/assets/scss/components-scss/input';
 @import '/src/assets/scss/components-scss/btn';
+@import '/src/assets/scss/components-scss/pagination';
 
 //版面配置
 @import '/src/assets/scss/layouts/grid';
