--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @import '/src/assets/scss/components-scss/input';
 @import '/src/assets/scss/components-scss/btn';
 @import '/src/assets/scss/components-scss/pagination';
+@import '/src/assets/scss/components-scss/tag';
 
 //版面配置
 @import '/src/assets/scss/layouts/grid';
