--- a/src/assets/scss/layouts/_admin-layout.scss
+++ b/src/assets/scss/layouts/_admin-layout.scss
@@ -6,18 +6,18 @@
 }
 
 .admin-sidebar {
-  width: 250px;
+  width: $sidebar-width;
   height: 100vh;
   flex-shrink: 0;
-  background-color: #fff;
-  border-right: 1px solid #e0e0e0;
+  background-color: $neutral-color-white;
+  border-right: 1px solid $neutral-color-100;
   display: flex;
   flex-direction: column;
 
   &__logo {
     padding: 20px;
     text-align: center;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid $neutral-color-100;
     h2 {
       color: #4a6741;
       margin: 0;
