--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -14,6 +14,9 @@
 
 //版面配置
 @import '/src/assets/scss/layouts/grid';
+@import '/src/assets/scss/layouts/admin-layout';
+@import '/src/assets/scss/layouts/default-layout';
+@import '/src/assets/scss/layouts/workspace-layout';
 
 // 此檔案用於存放全域css
 body {
