Style: 調整背景白色

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -24,7 +24,7 @@
 body {
   margin: 0;
   font-family: sans-serif;
-  background-color: $neutral-color-400;
+  background-color: $neutral-color-white;
   color: $neutral-color-800;
 }
 
