--- a/src/assets/scss/layouts/_grid.scss
+++ b/src/assets/scss/layouts/_grid.scss
@@ -17,6 +17,7 @@ $breakpoints: (
     max-width: $container-max-width;
     padding: 0 ($gutter/2);
     width: 100%;
+    overflow: hidden;
 }
 
 .row{
