--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -26,6 +26,7 @@ body {
   font-family: sans-serif;
   background-color: $neutral-color-white;
   color: $neutral-color-800;
+  overflow-x: hidden;
 }
 
 //中文標題迴圈
