Style: 微調字體參數，新增footer含rwd，微調nav顏色與定位

--- a/src/assets/scss/abstracts/_font.scss
+++ b/src/assets/scss/abstracts/_font.scss
@@ -9,9 +9,27 @@ $weight-bold: 700;
 // 行高 (Line Height)
 $lh-standard: 1.5;
 $lh-body: 1.8;
+$lh-heading: 1.2;
+$ls-heading-zh: 0.02em;
 
 // 字距 (Letter Spacing) - 將百分比轉換為 em
 // 公式: 6% = 0.06em
-$ls-heading-en: 0.06em;
-$ls-heading-zh: 0;
+$ls-heading-en: 0.08em;
+$ls-heading-zh: 0.1em;
 $ls-body: 0.12em;
+
+@function get-fluid-val($min-rem, $max-rem) {
+  $min-px: $min-rem * 16 / 1rem;
+  $max-px: $max-rem * 16 / 1rem;
+  $min-width: 375;
+  $max-width: 1440;
+  
+  $slope: ($max-px - $min-px) / ($max-width - $min-width);
+  $y-intercept: -$min-width * $slope + $min-px;
+  
+  // 轉回 rem 單位以符合瀏覽器縮放需求
+  $y-intercept-rem: $y-intercept / 16 * 1rem;
+  $slope-vw: $slope * 100vw;
+  
+  @return calc(#{$y-intercept-rem} + #{$slope-vw});
+}
