--- a/src/assets/scss/layouts/_workspace-layout.scss
+++ b/src/assets/scss/layouts/_workspace-layout.scss
@@ -4,7 +4,7 @@
     height: 100vh;
     overflow: hidden; // 防止外層出現捲軸
 
-    // 側邊欄固定寬度
+    // // 側邊欄固定寬度
     .sidebar {
         width: $sidebar-width;
         background: $primary-color-100;
