--- a/src/assets/scss/layouts/_grid.scss
+++ b/src/assets/scss/layouts/_grid.scss
@@ -1,13 +1,13 @@
 // 基礎設定
 $grid-columns: 12;
 $gutter: 20px; // 左右各 10px
-$container-max-width: 90%;
+$container-max-width: 1440px;
 
 // 斷點設定 (根據你的原代碼數值)
 $breakpoints: (
     "sm": 390px,
     "md": 810px,
-    "lg": 1200px,
+    "lg": 1024px,
     "xl": 1320px,
     "xxl": 1440px
 );
@@ -17,7 +17,18 @@ $breakpoints: (
     max-width: $container-max-width;
     padding: 0 ($gutter/2);
     width: 100%;
-    overflow: hidden;
+}
+
+@media screen and (max-width: 1440px) {
+    .container{
+        max-width: 95%;
+    }
+     // 在小於 1440px 時，左右留白保持彈性
+}
+@media screen and (max-width: 1200px) {
+    .container{
+        max-width: 98%;
+    }
 }
 
 .row{
