--- a/src/assets/scss/components-scss/_modal.scss
+++ b/src/assets/scss/components-scss/_modal.scss
@@ -1,8 +1,11 @@
+@use "../abstracts/color";
+@use "../abstracts/variables";
+
 .modal-card {
   width: 350px;
   height: 300px;
-  background-color: $neutral-color-white;
-  border-radius: $radius-base;
+  background-color: color.$neutral-color-white;
+  border-radius: variables.$radius-base;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -26,7 +29,7 @@
     border: none;
     cursor: pointer;
     font-size: 18px;
-    color: $neutral-color-black;
+    color: color.$neutral-color-black;
     padding: 5px;
 
     &:hover {
@@ -44,7 +47,7 @@
     align-items: center;
     margin-top: 20px;
     margin-bottom: 15px;
-    color: $neutral-color-white;
+    color: color.$neutral-color-white;
     font-size: 28px;
   }
 
@@ -57,11 +60,11 @@
     // 標題與描述的間距
     > [class*='zh-h'] {
       margin-bottom: 8px;
-      color: $neutral-color-black; // 標題預設黑色
+      color: color.$neutral-color-black; // 標題預設黑色
     }
 
     > [class*='p-p'] {
-      color: $neutral-color-700; // 描述文字灰色
+      color: color.$neutral-color-700; // 描述文字灰色
       margin: 0;
       // 確保長文字超出時顯示 ... (若不需要省略號可移除 overflow)
       overflow: hidden;
@@ -79,7 +82,7 @@
     button {
       flex: 1;
       height: 40px;
-      border-radius: $radius-base;
+      border-radius: variables.$radius-base;
       cursor: pointer;
       font-size: 16px; // 假設按鈕文字大小
       display: flex;
@@ -97,16 +100,16 @@
 
   // 1. Danger (紅色系 - 尚未儲存/登入失敗)
   &.danger {
-    border: 1px solid $secondary-color-danger-400; // 邊框色
+    border: 1px solid color.$secondary-color-danger-400; // 邊框色
 
     .icon-wrapper {
-      background-color: $secondary-color-danger-700; // 圖片中的紅色圓圈較深
+      background-color: color.$secondary-color-danger-700; // 圖片中的紅色圓圈較深
     }
 
     .btn-solid {
-      background-color: $secondary-color-danger-700;
-      background-color: $secondary-color-danger-700;
-      color: $neutral-color-white;
+      background-color: color.$secondary-color-danger-700;
+      background-color: color.$secondary-color-danger-700;
+      color: color.$neutral-color-white;
       border: none;
 
       &:hover {
@@ -116,26 +119,26 @@
 
     .btn-outline {
       background-color: transparent;
-      border: 1px solid $secondary-color-danger-700;
-      color: $secondary-color-danger-700;
+      border: 1px solid color.$secondary-color-danger-700;
+      color: color.$secondary-color-danger-700;
 
       &:hover {
-        background-color: $secondary-color-danger-200;
+        background-color: color.$secondary-color-danger-200;
       }
     }
   }
 
   // 2. Info (藍色系 - 刪除確認)
   &.info {
-    border: 1px solid $secondary-color-info-700;
+    border: 1px solid color.$secondary-color-info-700;
 
     .icon-wrapper {
-      background-color: $secondary-color-info-700;
+      background-color: color.$secondary-color-info-700;
     }
 
     .btn-solid {
-      background-color: $secondary-color-info-700;
-      color: $neutral-color-white;
+      background-color: color.$secondary-color-info-700;
+      color: color.$neutral-color-white;
       border: none;
       &:hover {
         opacity: 0.9;
@@ -144,10 +147,10 @@
 
     .btn-outline {
       background-color: transparent;
-      border: 1px solid $secondary-color-info-700;
-      color: $secondary-color-info-700;
+      border: 1px solid color.$secondary-color-info-700;
+      color: color.$secondary-color-info-700;
       &:hover {
-        background-color: $secondary-color-info-200;
+        background-color: color.$secondary-color-info-200;
       }
     }
   }
@@ -156,10 +159,10 @@
   // 特別尺寸：高度 203px
   &.success {
     height: 203px;
-    border: 1px solid $secondary-color-success-700;
+    border: 1px solid color.$secondary-color-success-700;
 
     .icon-wrapper {
-      background-color: $secondary-color-success-700; // 綠色打勾背景
+      background-color: color.$secondary-color-success-700; // 綠色打勾背景
       margin-bottom: 20px;
     }
 
@@ -180,7 +183,7 @@
   z-index: 9999; // 確保蓋在所有內容上面
 
   // 背景色：使用變數黑色的 50% 透明度
-  background-color: rgba($neutral-color-black, 0.5);
+  background-color: rgba(color.$neutral-color-black, 0.5);
 
   // (選用) 背景模糊效果：讓背後的網站看起來模糊，更有質感
   backdrop-filter: blur(3px);
