--- a/src/assets/scss/layouts/_grid.scss
+++ b/src/assets/scss/layouts/_grid.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 // 基礎設定
 $grid-columns: 12;
 $gutter: 20px; // 左右各 10px
@@ -47,7 +48,7 @@ $breakpoints: (
 //生成通用格線
 @for $i from 1 through $grid-columns{
     .col-#{$i}{
-        width: percentage($i/$grid-columns);
+        width: math.percentage($i/$grid-columns);
     }
 }
 
@@ -58,7 +59,7 @@ $breakpoints: (
         }
         @for $i from 1 through $grid-columns {
             .col-#{$key}-#{$i} {
-                width: percentage($i / $grid-columns);
+                width: math.percentage($i / $grid-columns);
             }
         }
     }
